Added RMAH and reworked My Shop a bit You can set builds to be private now.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -51,7 +51,11 @@
 								<li><a href="/build">All Builds</a></li>
 							</ul>
 						</li>
-						<li><a href="/user/shop">My Shop</a></li>
+						<li><a href="/user/shop">My Shop</a>
+							<!-- <ul class="sub_menu">
+								<li><a href="/item/pricer">Item Pricer</a></li>
+							</ul> -->
+						</li>
 						<?  if(true == false): ?>
 						<li><a href="/bazaar">Bazaar</a>
 							<ul class="sub_menu">
