--- a/application/views/scripts/user/shop/all-completed.phtml
+++ b/application/views/scripts/user/shop/all-completed.phtml
@@ -29,31 +29,13 @@
 					<?= $this->methodCleaner($sale->method) ?>
 				</td>
 				<td class='data'>
-					<img src="/images/goldcoin.png"> 
-					<? if($sale->method == 'ah'): ?>
-						<?= $this->prettyStat($sale->bid) ?>
-					<? else: ?>
-					<? endif ?>
+					<?= $this->priceDisplay($sale, 'bid') ?>
 				</td>
 				<td class='data'>
-					<img src="/images/goldcoin.png"> 
-					<? if($sale->method == 'ah'): ?>
-						<?= $this->prettyStat($sale->buyout) ?>
-					<? else: ?>
-					<? endif ?>
+					<?= $this->priceDisplay($sale, 'buyout') ?>
 				</td>
-				<td class="data"> 
-					<div class='item-stat'>
-						<? if($sale->method == 'ah'): ?>
-							<span class='value'>
-								<img src="/images/goldcoin.png"> <?= $this->prettyStat($sale->soldFor / 0.85) ?>
-							</span>
-							<span class="stat">
-								<?= $this->prettyStat($sale->soldFor) ?> after AH cut
-							</span>
-						<? else: ?>
-						<? endif ?>
-					</div>
+				<td class='data'>
+					<?= $this->priceDisplay($sale, 'soldFor') ?>
 				</td>
 			</tr>
 		<? endforeach ?>
