Item Pricer - Test

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -52,9 +52,9 @@
 							</ul>
 						</li>
 						<li><a href="/user/shop">My Shop</a>
-							<!-- <ul class="sub_menu">
+							<ul class="sub_menu">
 								<li><a href="/item/pricer">Item Pricer</a></li>
-							</ul> -->
+							</ul>
 						</li>
 						<?  if(true == false): ?>
 						<li><a href="/bazaar">Bazaar</a>
