Apology for Downtime and fix to plugin loader

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -78,7 +78,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Update #20 including the "Item Pricer" is now live, <a href="http://d3up.com/update/21">read all about it here</a>. I've also setup a <a href="http://facebook.com/d3upgrade">Facebook Page</a> for D3Up as another way you can chat with me and offer up feedback, feel free to "like" it to help spread the word! As always, please submit feedback/bugs/suggestions/anything via email to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
+					<b>System Message</b>: Sorry about the downtime today! Update #20 including the "Item Pricer" is now live, <a href="http://d3up.com/update/21">read all about it here</a>. As always, please submit feedback/bugs/suggestions/anything via email to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
 				</div>
 			</div>
 		</div>
