--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -341,6 +341,12 @@ ul#simulate-stats input,
 	width: 42px;
 	padding: 0;
 }
+.d3up-table th {
+	color: #B18135;
+	background: #191919;
+	font-size: 1em;
+	border-top: 1px solid #111;
+}
 .build-paginator, 
 .more-builds {
 	text-align: center;
